--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ElectlineLeader</string>
+    <string name = "login">Login</string>
+    <string name = "signin">Sign in</string>
+    <string name = "password">Password</string>
+    <string name = "email">Email</string>
 </resources>
