--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name = "signin">Sign in</string>
     <string name = "password">Password</string>
     <string name = "email">Email</string>
+    <string name = "create_an_account">Create an Account</string>
+    <string name = "register">Register</string>
+    <string name = "name">Name</string>
+    <string name = "phone_number">Phone number</string>
 </resources>
