--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ElectlineLeader</string>
+    <string name = "app_name">ElectlineLeader</string>
     <string name = "login">Login</string>
     <string name = "signin">Sign in</string>
     <string name = "password">Password</string>
@@ -8,6 +8,17 @@
     <string name = "register">Register</string>
     <string name = "f_name">First Name</string>
     <string name = "l_name">Last Name</string>
-    <string name="dob">Date of birth</string>
+    <string name = "dob">Date of birth</string>
     <string name = "phone_number">Phone number</string>
+
+    <string-array name = "questions">
+
+        <item>In what city were you born</item>
+        <item>What is your favorite movie?</item>
+        <item>When is your anniversary?</item>
+
+    </string-array>
+
+    <string name = "Rs">\u20B9 1000</string>
+    <string name = "logout">Logout</string>
 </resources>
